--- a/Flexbox Items Özellikleri/Flexbox-Items Özellikleri.html
+++ b/Flexbox Items Özellikleri/Flexbox-Items Özellikleri.html
@@ -38,13 +38,13 @@
         .box-2{
             background: blue;
             order: 1;
-            flex-grow: 3; /*Flex-grow özelliği sayesinde ise contentlerimizin flexbox'umuzun alanının ne kadarını dolduracağını
+            flex-grow: 2; /*Flex-grow özelliği sayesinde ise contentlerimizin flexbox'umuzun alanının ne kadarını dolduracağını
             ayarlayabiliyoruz.*/
         }
         .box-3{
             background: green;
             order: 2;
-            align-self: flex-end; /*Align-self özelliği sayesinde flexbox'umuz içerisindeki contentleri ayrı bir şekilde
+            align-self: flex-start; /*Align-self özelliği sayesinde flexbox'umuz içerisindeki contentleri ayrı bir şekilde
             diğerlerinden bağımsız konumlandırabiliyoruz*/
             flex-grow: 4;
         }
